# cpe553_final_project

./: .gitignore  CMakeLists.txt  WindowManager.cu  WindowManager.cuh  main.cu  showtext.cpp  showtext.cu  showtext.h
gtk/: Window.cu  Window.cuh  WindowManager.cu  WindowManager.cuh
gui/: Window.cu  Window.cuh  WindowManager.cu  WindowManager.cuh
matrices/: dev_array.cuh  kernel.cu  kernel.cuh  kernels.cu  kernels.cuh  matrices.csv
test/: window_manager.cu  window_manager.h
